--- a/handins/handin1.ipynb
+++ b/handins/handin1.ipynb
@@ -391,8 +391,52 @@
    "metadata": {},
    "source": [
     "*******************\n",
-    "To run DBSCAN the following steps are involved:\n",
-    "1. \n",
+    "The DBSCAN Algorithm works as follows:\n",
+    "1. **For each** point x in the dataset:\n",
+    "2. **If** x is not yet assigned to any cluster C:\n",
+    "3.   **If** x is a core point (has at least MinPts points within $\\epsilon$ radius):\n",
+    "    - Create a new cluster containing x.\n",
+    "    - Add Neighbours of x.\n",
+    "\n",
+    "Add Neighbours (to find all density reachable points):\n",
+    "1. Get all the points in $\\epsilon$ radius.\n",
+    "2. Add them to the cluster.\n",
+    "3. Run Add Neighbours on them too.\n",
+    "\n",
+    "#### Example using the Given Dataset\n",
+    "1. Choose Point 1 for first iteration\n",
+    "2. The points in its $\\epsilon = 0.2$ radius are {9, 11}, besides Point 1 itself, which can be easily recognized from the distance matrix. The number of points (3) in the neighbourhood is equal to $MinPts = 3$. Point 13 isn't included, because it is slightly above $\\epsilon$.\n",
+    "3. These are Point 1's neighbours. Add these points to Cluster 1.\n",
+    "4. For each of them recursively find their neighbours too, and add them to Cluster 1. The listed points are density reachable from Point 1.\n",
+    "    - Point 9's neighbours: {1, 10, 11, 12, 13}\n",
+    "    - Point 11's neighbours: {9, 13}\n",
+    "    - Point 10's neighbours: {9, 12}\n",
+    "    - Point 12's neighbours: {9, 10, 13}\n",
+    "    - Point 13's neighbours: {9, 11, 12}\n",
+    "    So cluster 1 is {1, 9, 10, 11, 12, 13}.\n",
+    "<details><summary>Do the same for every point only if it's not contained in a cluster yet, and mark points not reaching the MinPts neighbourhood count as noise.</summary>\n",
+    "\n",
+    "Choose Point 2 for the second iteration. Find points that are density reachable from it. <br>\n",
+    "    - Point 4's neighbours: {2, 3, 7, 8} <br>\n",
+    "    - Point 7's neighbours: {2, 4, 6, 8} <br>\n",
+    "    - Point 8's neighbours: {2, 4, 6, 7} <br>\n",
+    "    - Point 3's neighbours: {4} <br>\n",
+    "    - Point 6's neighbours: {7, 8} <br>\n",
+    "    Creating the union of the defined sets yields cluster 2 = {2, 3, 4, 6, 7, 8} <br>\n",
+    "\n",
+    "The next point that is not contained in a cluster yet is <br>\n",
+    "\n",
+    "Choose Point 5 for the third iteration. But since its only neighbour is 15, it is not a core object, meaning it is marked as noise. <br>\n",
+    "\n",
+    "Next is Point 14, which suffers the same faith as Point 5. For now. <br>\n",
+    "\n",
+    "Last is Point 15. Its neighbourhood contains all the remaining points. Cluster 3 is {5, 14, 15}.\n",
+    "</details>\n",
+    "\n",
+    "5. Iterating through all the points yields us 3 clusters.\n",
+    "    - Cluster 1: {1, 9, 10, 11, 12, 13}\n",
+    "    - Cluster 2: {2, 3, 4, 6, 7, 8}\n",
+    "    - Cluster 3: {5, 14, 15}\n",
     "\n",
     "******************"
    ]
