--- a/handins/handin1.ipynb
+++ b/handins/handin1.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "loaded-nicholas",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
     "After looking at the dataset _below_, you want to detect the red outlier point, assuming you know that it is an outlier. \n",
     "\n",
     "Which approach would be the most obvious to find the red outlier? Please (1) check the box and (2) motivate your answer below:\n",
-    "- [ ] Distance based approach (with parameteres $\\pi=0.5$, $\\epsilon=2$ and euclidean distance)\n",
+    "- [X] Distance based approach (with parameteres $\\pi=0.5$, $\\epsilon=2$ and euclidean distance)\n",
     "- [ ] Angle based approach\n",
     "- [ ] Depth based approach"
    ]
@@ -537,12 +537,8 @@
    "metadata": {},
    "source": [
     "*******************\n",
-    "**YOUR ANSWER HERE**\n",
-    "\n",
-    "\n",
-    "\n",
-    "**Related to Outlier Detection => Week 5!**\n",
-    "\n",
+    "The red point is visually distant from the cluster of blue points in the scatter plot. A distance-based approach is the most obvious choice because it directly measures the Euclidean distance of the red point to the blue points.\n",
+    "Angle-based methods are less suitable as the outlier is primarily distant, not angularly deviated. Depth-based methods, are overkill for this dataset. Thus the most suitable approach for this example is a distance-based one.\n",
     "******************"
    ]
   },
