--- a/handins/handin1.ipynb
+++ b/handins/handin1.ipynb
@@ -1455,7 +1455,7 @@
     "\n",
     "\"Standard score normalization preserves the variance. Therefore, features are directly comparable within the matrix\".\n",
     "\n",
-    "Well, what standard score normalization does is to transform the covariance matrix into a correlation matrix, having ranging values from -1 to 1., being easier to interpret and compare, given that all feature have the same scale. \n",
+    "Well, what standard score normalization does is to transform the covariance matrix into a correlation matrix, having ranging values from -1 to 1., being easier to interpret and compare, given that all feature have the same scale.  Normalization into zero mean and unit variance, therefore the same scale and therefore unit ranging values, standardizing the variance to 1, comparision being fair. This doesn't happen in the Min-Max scaling, no standardization of the variance, harder to have direct comparability. \n",
     "\n",
     "\n",
     "\n",
