--- a/handins/handin1.ipynb
+++ b/handins/handin1.ipynb
@@ -802,12 +802,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcafa2e6",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "43fe260d",
    "metadata": {},
    "source": [
@@ -821,14 +815,16 @@
    "metadata": {},
    "source": [
     "*******************\n",
-    "**YOUR ANSWER HERE**\n",
+    "Let $K(x,x′)=K_1(x,x′)+K_2​(x,x′)$ and $K(x′,x)=K_1(x′,x)+K_2​(x′,x)$.\n",
+    "$K(x,x′)=K(x′,x)$, because $K(x,x′)=K_1(x,x′)+K_2​(x,x′)=K_1(x′,x)+K_2​(x′,x)=K(x′,x)$, if $K_1$ and $K_2$ are symmetric.\n",
     "\n",
+    "For any set of points $\\{x_1, x_2, ..., x_n\\}$ and coefficients $\\{a_1, a_2, ..., a_n\\}$:\n",
+    "$\\sum_{i=1}^{n} \\sum_{j=1}^{n} a_i a_j K(x_i, x_j) = \\sum_{i=1}^{n} \\sum_{j=1}^{n} a_i a_j (K_1(x_i, x_j) + K_2(x_i, x_j))$\n",
+    "$= \\sum_{i=1}^{n} \\sum_{j=1}^{n} a_i a_j K_1(x_i, x_j) + \\sum_{i=1}^{n} \\sum_{j=1}^{n} a_i a_j K_2(x_i, x_j)$\n",
+    "Since $K_1$ and $K_2$ are positive-definite kernels, both terms are positive. Therefore, their sum is also positive:\n",
+    "$\\sum_{i=1}^{n} \\sum_{j=1}^{n} a_i a_j K(x_i, x_j) > 0$.\n",
     "\n",
-    "\n",
-    "Pass\n",
-    "\n",
-    "\n",
-    "\n",
+    "TODO: idk dot product\n",
     "******************"
    ]
   },
@@ -846,10 +842,19 @@
    "metadata": {},
    "source": [
     "*******************\n",
-    "**YOUR ANSWER HERE**\n",
+    "Let's write up $K(x,x')=e^{2 ln(x^{\\top}x')-(x-x')^{\\top}(x-x')}=K(x,x') = e^{2\\ln(x^Tx')} \\cdot e^{-(x-x')^T(x-x')}$ as a product of two kernels.\n",
+    "Split the kernel function in two: $K(x,x') = K_1(x,x') \\cdot K_2(x,x')$, where  \n",
+    "$K_1(x,x') = e^{2\\ln(x^Tx')} = (x^Tx')^2$  \n",
+    "$K_2(x,x') = e^{-(x-x')^T(x-x')} = e^{-||x-x'||^2}$  \n",
     "\n",
+    "#### Prove K_1 is Positive-Definite\n",
+    "$L(x,x') = x^Tx'$ is the linear kernel a known positive-definite kernel.\n",
     "\n",
-    "Pass\n",
+    "#### Prove K_2 is Positive-DEfinite\n",
+    "$K_2(x,x') = e^{-||x-x'||^2}$ is the Gaussian RBF kernel, also a known positive-definite kernel.\n",
+    "\n",
+    "### Apply the property from exercise C)\n",
+    "The product of two positive-definite kernels is also positive-definite. Since $K_1(x,x')$ and $K_2(x,x')$ are positive-definite, their product $K(x,x') = K_1(x,x') \\cdot K_2(x,x')$ is also positive-definite.\n",
     "******************"
    ]
   },
