--- a/handins/handin1.ipynb
+++ b/handins/handin1.ipynb
@@ -1264,7 +1264,7 @@
     "What is the relationship between the correlation matrix and the covariance matrix? (1) Check the correct box below and (2) motivate your answer.\n",
     "\n",
     "- [ ] The correlation matrix contains the unnormalized covariance values\n",
-    "- [ ] The correlation matrix contains the normalized covariance values\n",
+    "- [X] The correlation matrix contains the normalized covariance values\n",
     "- [ ] The covariance matrix contains the variance of the correlation\n",
     "\n",
     "<font color='red'>Do NOT just choose an answer. Please clarify WHY this is the correct answer.</font>"
