week 7 ex 2 fix

--- a/exercises/Week-7-community-detection-23.ipynb
+++ b/exercises/Week-7-community-detection-23.ipynb
@@ -170,6 +170,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def M_actual(G, s):\n",
+    "    \"\"\"\n",
+    "        args:\n",
+    "            G: an Networkx graph\n",
+    "            s: an indicatorvector of {0, 1, ..., |C|} indicating which cluster each node corresponds to.\n",
+    "    \"\"\"\n",
+    "    m = G.number_of_edges()\n",
+    "    B = nx.modularity_matrix(G)\n",
+    "    B = np.array(B)\n",
+    "    C = len(set(s))\n",
+    "    modularity_ = 0\n",
+    "    for c in range(C):\n",
+    "        C_clust = []\n",
+    "        for i in range(len(s)):\n",
+    "            if s[i] == c: C_clust.append(i)\n",
+    "        for i in C_clust:\n",
+    "            for j in C_clust:\n",
+    "                modularity_ += B[i,j]\n",
+    "    return (modularity_/(2*m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig, ax = plt.subplots(3, 4, figsize=(13,9))\n",
     "test_sizes = [(20, 3), (56, 8), (8, 48)]\n",
     "\n",
@@ -192,7 +219,7 @@
     "    nx.draw(G, pos=pos, ax=ax[i, 3], node_size=15, node_color=y//8)\n",
     "\n",
     "    # Computation of Modularity\n",
-    "    modularities.append([M_eq(G, y), M_eq(G, y//2), M_eq(G, y//4), M_eq(G, y//8)])\n",
+    "    modularities.append([M_actual(G, y), M_actual(G, y//2), M_actual(G, y//4), M_actual(G, y//8)])\n",
     "\n",
     "print((\"| \" + \"%-10s | \" * 6) % (\"Cliques\", \"Size\", \"Single\", \"Pairs\", \"Quads\", \"Octs\"))\n",
     "print(\"-\" * 79)\n",
