--- a/handins/handin2.ipynb
+++ b/handins/handin2.ipynb
@@ -386,7 +386,7 @@
     "<span style='color: green'>**\\[Motivate\\]**</span> Assume you have embedded the graph in **1.1.2** with a __Linear Embedding__ using unnormalized Laplacian matrix of the graph as the similarity matrix. How do you expect the embeddings to be if the embedding dimension is $d = 1$? \n",
     "\n",
     "* [ ] Nodes 1, 2, 3, 4 will be placed in the corners of a hypercube\n",
-    "* [ ] Nodes 2,3 will have the same embedding while 1,4 will be far from each other.\n",
+    "* [X] Nodes 2,3 will have the same embedding while 1,4 will be far from each other.\n",
     "* [ ] Nodes 1,4 have the same embedding and 2,3 will have very close embeddings.\n",
     "* [ ] Nodes 3,4 will be very far apart."
    ]
@@ -398,7 +398,12 @@
    "source": [
     "****\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
-    "******************"
+    "******************\n",
+    "\n",
+    "***\n",
+    "Well, we observe the initial graph and observe that node 1 and 4 have two connections, degree of 2, whereas 2 and 3 have degree of 3. Regarding adjacency, we observe that both 2 and 3 have connections to ALL nodes, whereas 1 and 4 have connection to 2 and 3, no connections between each other. Regarding the missing connectivity between 1 and 4, while 2, 3 are connected to all nodes, the correct answer is> \" Nodes 2,3 will have the same embedding while 1,4 will be far from each other.\"\n",
+    "\n",
+    "***"
    ]
   },
   {
