--- a/handins/handin2.ipynb
+++ b/handins/handin2.ipynb
@@ -441,7 +441,8 @@
     "******************\n",
     "\n",
     "***\n",
-    "bo\n",
+    "We know per theorem that all eigenvalues are greater than 0, therefore we know that $\\lambda_{0} \\geq 0$.  Well, we know that, for any graph, no matter the graph, there exists a eigenvalue having the value 0, due to eigenvectors such as the eigenvector 1.  \n",
+    "More concrete, given formula $L \\cdot x = \\lambda \\cdot  x$, where x is eigenvector, $\\lambda$ being eigenvalue and L being the Laplacian. So, given $x = 1$, we have:  $\\lambda = L \\cdot 1 = 0$, due to having the nodes degree added with the negative value of -1 per edge connection for nodes, add because the adjacency added togheter per node is equivalent with the degree of that specific node, you get 0, having $\\lambda = 0$ if $x=1$, and since 0 is the absolute smallest value of en eigenvalue and the smallest eigenvalue is $\\lambda_{0}$, we know $\\lambda_{0} = 0 $\n",
     "***"
    ]
   },
@@ -461,7 +462,23 @@
    "source": [
     "*******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
-    "******************"
+    "******************\n",
+    "\n",
+    "***\n",
+    "Let's first analyse and understand what a complete graph is that when all nodes are connected with each other, meaning that the matrix L = D - A  will have it's diagonal equal to the degree, while the rest of the entries are all equal to one. The diagonal equal to the degree, given a complete graph, is n-1 (not include yourself).  Let's first look at the classic eigenvalue equation: $Lx = \\lambda{x}$. Regarding the previous proof for $\\lambda_{0} = 0$ where the eigenvector is $[111...11]^{T}$, we need a vector being orthogonal to the 1 vector in order to respect the eigenvalue equation. Orthogonality means that the dot product between our vector $[x_{1}x_{2}...x_{n}]^{T}$ and $[111...11]^{T}$ should be 0. The only possibility for our vector to be 0 is that $\\sum_{i} x_{i}=0$. \n",
+    "\n",
+    "Let's define $z = Lx$, where $z = \\lambda x$. Well, given the value z, for the i'th entry is equal to i'th row of L with y. Well, we know that the diagonal  is (n-1), the i'th position, and the rest are -1, meaning:\n",
+    "\n",
+    "$z_{i} = (n-1)x_{i} - \\sum_{j \\neq i}x_{j}$\n",
+    "\n",
+    "Simplifing to\n",
+    "\n",
+    "$z_{i} =  (nx_{i} - x_{i}) - \\sum_{j \\neq i}x_{j}$ = $nx_{i} - (x_{i} + \\sum_{j \\neq i}x_{j})$ = $nx_{i} - \\sum_{j=1}^{n}x_{j}$ = $nx_{i}$\n",
+    "\n",
+    "That's because of the orthogonality rule which says $\\sum_{i} x_{i} = 0$\n",
+    "\n",
+    "More concrete, we have $z_{i} = nx_{i}$ generalized to Lx = nx, where $\\lambda = n$, meaning that $\\lambda_{1}, ... , \\lambda_{n-1} = n$\n",
+    "***"
    ]
   },
   {
