--- a/handins/handin2.ipynb
+++ b/handins/handin2.ipynb
@@ -498,7 +498,11 @@
    "source": [
     "******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
-    "******************"
+    "******************\n",
+    "\n",
+    "***\n",
+    "Well, we know that each node should have a degree of at least k in order to have the graph being k connected, as well as removing k-1 vertices do not disconnect the graph. To get $lambda = 0$, we need to have a constant eigenvector, as showm in Task 1.2.1, but that doesn't show specificlaly that $\\lambda_{0} = ... = \\lambda_{k} = 0$, but only shows that there is at least one lambda being equal to 0. In order to have specifically $\\lambda_{0} = ... = \\lambda_{k} = 0$, but we need to make sure that k of those constant eigenvectors are linearly independent. This can be done by looking locally for each component, where each component do have a number of connections (for example, one component can have 3 connections, meaning degree of 3 and all connected with each other, another can have 2, and so on, until k components). For those, we define eigenvectors [1 1 1] and [1 1] locally (given 3 and 2 connected component). More concrete, if locally looking at the components, we define 1 vectors for those that have the size of the nodes being interconnected locally. Given globally observation where we have n nodes, not only component group number of nodes, we have the same eigenvectors, but we fill the rest of the entries to be 0, having the value globally being $\\lambda = 0$. Since we have now k independent eigenvectors with this procedure, we got $\\lambda_{0} = \\lambda_{1} = ... = \\lambda_{k} = 0$\n",
+    "***"
    ]
   },
   {
