--- a/handins/handin2.ipynb
+++ b/handins/handin2.ipynb
@@ -524,7 +524,10 @@
    "source": [
     "******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
-    "*****************"
+    "*****************\n",
+    "***\n",
+    "For this exercise, we use Rayleigh Theorem, where we focus on $\\sum_{(i,j)\\in E} (x_{i} - x_{j})^{2} = x^{T}Lx$. Given that we have in the new grah $G^{'}$ an edge less than G, we conclude that $x^{T}L'x \\leq x^{T}Lx$ , because  the summation of squared distance between all edges is less or equal (could have been 0 for the original graph G) for the new Graph, given a edge less. Regarding the notebook where $\\lambda_{n} = min_{x \\neq 0} \\frac{m^{T}Mx}{x^{T}x}$ and $\\lambda_{n-1} = min_{x \\neq 0, x^{T}x_{1} = 0} \\frac{x^{T}Mx}{x^{T}x}$ we can addapt it to our laplace L for any lambda i, and get:  $\\lambda_{i} = \\lambda_{n-(n-i)} = min_{x \\neq 0, x^{T}x_{1} , ... , x^{T}x_{n-i}} \\frac{x^{T}Lx}{x^{T}x} $. From this we can conclude that, since x is an arbitrary equivalent vector in both cases, where the only significant difference is the value of the Rayleigh Theorem, where given $x^{T}L'x \\leq x^{T}Lx$, we conclude that, regardless of lambda, $\\lambda_{i}' \\leq \\lambda_{i}$. \n",
+    "***"
    ]
   },
   {
