--- a/handins/handin2.ipynb
+++ b/handins/handin2.ipynb
@@ -551,7 +551,7 @@
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
     "******************\n",
     "***\n",
-    "\n",
+    "Given two components, we can evaluate each individual component and find the eigenvectors accordinlgy for the eigenvalues. Given L_{G1} being the laplacian of our graph $G_{1}$, it's eigenvalue of type $\\lambda_{k}^{1}$ is $v_{k}$, respectively $\\lambda_{k}^{2}$ and eigenvector $w_{k}$ for $G_{2}$. If the graphs $G_{1}$ and $G_{2}$ are disjointly part of graph G, then we have can also merge the eigenvalues by having first the eigenvectors for the first graph in form $(v, 0)$, influencing only the elements from the laplacian of the first graph, and $(0, w)$ incluencing only the elements from the laplacian of the second graph. \n",
     "***"
    ]
   },
