--- a/handins/handin2.ipynb
+++ b/handins/handin2.ipynb
@@ -935,6 +935,13 @@
    "source": [
     "******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
+    "\n",
+    "Ok, let's answer each question individually.  Regarding t very small, like very close to 0, we observe that there are way more 0 weight entries than the other from 1. That also makes sense, due to the fact that we take the epsilon of a very big negative number, we lend more towards 0, that's why the argument. \n",
+    "\n",
+    "Given that t is very large, like t=10, we can observe that the the weight frequency is distributed much more on the high end, where no many weights are smaller than 0.88. The frequencies are more distributed given t being around 0.2, for example. That' because we have the inner paranthesis being closer and closer to 0, where exp(0) = 1\n",
+    " \n",
+    "\n",
+    "\n",
     "******************"
    ]
   },
