--- a/handins/handin2.ipynb
+++ b/handins/handin2.ipynb
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "different-brooks",
    "metadata": {},
    "outputs": [],
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "engaged-cancer",
    "metadata": {},
    "outputs": [
@@ -1000,8 +1000,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 7\u001b[0m\n\u001b[0;32m      3\u001b[0m nodeID \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./data/nodeID.pickle\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m### YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m### YOUR CODE HERE\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m eigval_norm, eigvec_norm \u001b[38;5;241m=\u001b[39m \u001b[43mgraph_eig\u001b[49m\u001b[43m(\u001b[49m\u001b[43mL_norm\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m eigval_rw, eigvec_rw \u001b[38;5;241m=\u001b[39m graph_eig(L_rw)\n\u001b[0;32m     10\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(\u001b[38;5;241m0\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[12], line 5\u001b[0m, in \u001b[0;36mgraph_eig\u001b[1;34m(L)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgraph_eig\u001b[39m(L): \n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03m        Takes a graph Laplacian and returns sorted the eigenvalues and vectors.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m     lambdas, eigenvectors \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinalg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meig\u001b[49m\u001b[43m(\u001b[49m\u001b[43mL\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m     lambdas \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mreal(lambdas)\n\u001b[0;32m      7\u001b[0m     eigenvectors \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mreal(eigenvectors)\n",
+      "Cell \u001b[1;32mIn[16], line 7\u001b[0m\n\u001b[0;32m      3\u001b[0m nodeID \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./data/nodeID.pickle\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m### YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m### YOUR CODE HERE\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m eigval_norm, eigvec_norm \u001b[38;5;241m=\u001b[39m \u001b[43mgraph_eig\u001b[49m\u001b[43m(\u001b[49m\u001b[43mL_norm\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m eigval_rw, eigvec_rw \u001b[38;5;241m=\u001b[39m graph_eig(L_rw)\n\u001b[0;32m     10\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(\u001b[38;5;241m0\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[14], line 5\u001b[0m, in \u001b[0;36mgraph_eig\u001b[1;34m(L)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgraph_eig\u001b[39m(L): \n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03m        Takes a graph Laplacian and returns sorted the eigenvalues and vectors.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m     lambdas, eigenvectors \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinalg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meig\u001b[49m\u001b[43m(\u001b[49m\u001b[43mL\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m     lambdas \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mreal(lambdas)\n\u001b[0;32m      7\u001b[0m     eigenvectors \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mreal(eigenvectors)\n",
       "File \u001b[1;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36meig\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
       "File \u001b[1;32md:\\MiniConda\\envs\\dm25\\lib\\site-packages\\numpy\\linalg\\linalg.py:1296\u001b[0m, in \u001b[0;36meig\u001b[1;34m(a)\u001b[0m\n\u001b[0;32m   1170\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   1171\u001b[0m \u001b[38;5;124;03mCompute the eigenvalues and right eigenvectors of a square array.\u001b[39;00m\n\u001b[0;32m   1172\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1293\u001b[0m \n\u001b[0;32m   1294\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   1295\u001b[0m a, wrap \u001b[38;5;241m=\u001b[39m _makearray(a)\n\u001b[1;32m-> 1296\u001b[0m \u001b[43m_assert_stacked_2d\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1297\u001b[0m _assert_stacked_square(a)\n\u001b[0;32m   1298\u001b[0m _assert_finite(a)\n",
       "File \u001b[1;32md:\\MiniConda\\envs\\dm25\\lib\\site-packages\\numpy\\linalg\\linalg.py:183\u001b[0m, in \u001b[0;36m_assert_stacked_2d\u001b[1;34m(*arrays)\u001b[0m\n\u001b[0;32m    181\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m a \u001b[38;5;129;01min\u001b[39;00m arrays:\n\u001b[0;32m    182\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m a\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[1;32m--> 183\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m LinAlgError(\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m-dimensional array given. Array must be \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    184\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mat least two-dimensional\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m a\u001b[38;5;241m.\u001b[39mndim)\n",
@@ -1014,6 +1014,16 @@
     "L_rw = None\n",
     "nodeID = pickle.load(open('./data/nodeID.pickle', 'rb'))\n",
     "### YOUR CODE HERE\n",
+    "A = nx.adjacency_matrix(G).toarray()  # Get adjacency matrix\n",
+    "D = np.diag(np.sum(A, axis=1))        # Degree matrix\n",
+    "\n",
+    "# Compute normalized Laplacian\n",
+    "D_inv_sqrt = np.linalg.inv(np.sqrt(D))\n",
+    "L_norm = np.identity(D.shape[0]) - D_inv_sqrt @ A @ D_inv_sqrt\n",
+    "\n",
+    "# Compute random walk Laplacian\n",
+    "D_inv = np.linalg.inv(D)\n",
+    "L_rw = np.identity(D.shape[0]) - D_inv @ A\n",
     "### YOUR CODE HERE\n",
     "\n",
     "eigval_norm, eigvec_norm = graph_eig(L_norm)\n",
