--- a/handins/handin2.ipynb
+++ b/handins/handin2.ipynb
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "engaged-cancer",
    "metadata": {},
    "outputs": [
@@ -1030,6 +1030,8 @@
     "nodeID = pickle.load(open('./data/nodeID.pickle', 'rb'))\n",
     "A = nx.adjacency_matrix(G).toarray()  # Step 1: Adjacency matrix\n",
     "n = A.shape[0]                        # Number of nodes\n",
+    "\n",
+    "\n",
     "\n",
     "# Step 2: Degree matrix\n",
     "D = np.zeros((n, n))\n",
@@ -1104,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "welsh-composite",
    "metadata": {},
    "outputs": [],
@@ -1112,7 +1114,37 @@
     "from sklearn.cluster import k_means\n",
     "\n",
     "def spect_cluster(G, eig_type=\"normal\", k=5, d=5):\n",
-    "    ### YOUR CODE HERE      \n",
+    "    ### YOUR CODE HERE\n",
+    "    # Copy pase from the previous exercise\n",
+    "    A = nx.adjacency_matrix(G).toarray()\n",
+    "    n = A.shape[0]\n",
+    "\n",
+    "    \n",
+    "    D = np.zeros((n, n))\n",
+    "    for i in range(n):\n",
+    "        D[i, i] = np.sum(A[i])\n",
+    "    \n",
+    "    \n",
+    "    if eig_type == \"normal\":\n",
+    "        L_norm = np.identity(n)\n",
+    "        for i in range(n):\n",
+    "            for j in range(n):\n",
+    "                if D[i, i] != 0 and D[j, j] != 0:\n",
+    "                    L_norm[i, j] -= A[i, j] / (np.sqrt(D[i, i]) * np.sqrt(D[j, j]))\n",
+    "    # Copy pase from the previous exercise\n",
+    "\n",
+    "    #Compute eigenvalues and eigenvectors of L.\n",
+    "    lambdas, eigvecs = graph_eig(L_norm)\n",
+    "    X = eigvecs[:, :d]\n",
+    "    \n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        norm = np.linalg.norm(X[i])\n",
+    "        if norm > 0:\n",
+    "            X[i] = X[i] / norm\n",
+    "\n",
+    "    \n",
+    "    centers, y_clust, inertia = k_means(X, n_clusters=k)\n",
     "    ### YOUR CODE HERE\n",
     "    return y_clust"
    ]
