--- a/handins/handin3.ipynb
+++ b/handins/handin3.ipynb
@@ -244,17 +244,17 @@
    "source": [
     "*******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
-    "******************\n",
     "\n",
     "\n",
-    "******************\n",
     "## Solution\n",
     "\n",
     "Our current notation is, like explained in the previous task, the following:     $(i,j, L_{i}, L_{ij}, L_{j})$. \n",
     "\n",
     "This means that we  need to add a sixth field, which is $d \\in \\{\\leftarrow, \\rightarrow\\}$ , where forward means :  $(i,j, L_{i}, L_{ij}, L_{j}, \\rightarrow)$ and backwards means : $(i,j, L_{i}, L_{ij}, L_{j}, \\leftarrow)$. \n",
     "\n",
-    "The ordering will be : $\\rightarrow$, then $\\leftarrow$. \n",
+    "The ordering will be : $\\rightarrow$, then $\\leftarrow$, $\\rightarrow$ lower lexicographically then $\\rightarrow$. \n",
+    "\n",
+    "The argumentation behind it is that they will simply play the forward edge and then the back-edge accordingly, simulating the same concept as in the undirected graph, but having those type of edges being allready predefined. \n",
     "\n",
     "\n",
     "******************\n",
@@ -277,6 +277,15 @@
    "source": [
     "*******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
+    "\n",
+    "\n",
+    "## Solution\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "******************"
    ]
   },
