add on explanation

--- a/handins/handin3.ipynb
+++ b/handins/handin3.ipynb
@@ -449,6 +449,10 @@
    "source": [
     "*******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
+    "\n",
+    "\n",
+    "As far as understood> Pattern 'P' structure is implicitly used to generate 'matches' beforehand, therefore not required. \n",
+    "\n",
     "******************"
    ]
   },
