--- a/handins/handin3.ipynb
+++ b/handins/handin3.ipynb
@@ -548,6 +548,13 @@
    "source": [
     "*******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
+    "\n",
+    "\n",
+    "## Solution:\n",
+    "\n",
+    "Look at the transactions and find where the subset {Dog, Pig, Cow} exists. We find it at 2, 3, 4, so count 3. \n",
+    "\n",
+    "\n",
     "******************"
    ]
   },
@@ -567,6 +574,21 @@
    "source": [
     "*******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
+    "\n",
+    "Let's first define their meaning.  Support means fraction of transactions that contain both X and Y, and confidence means how often Y appears in transactions that contain X.\n",
+    "\n",
+    "\n",
+    "Support calculation for  {Dog, Pig} -> Cow is \n",
+    "\n",
+    "$s = \\frac{\\sigma (Dog, Pig, Cow)}{|T|} = \\frac{3}{9} = 0.333333$\n",
+    "\n",
+    "Association calculation for {Dog, Pig} -> Cow is \n",
+    "\n",
+    "$c = \\frac{\\sigma (Dog, Pig, Cow)}{\\sigma (Dog, Pig)} = \\frac{3}{3} = 1 $\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "******************"
    ]
   },
