--- a/handins/handin3.ipynb
+++ b/handins/handin3.ipynb
@@ -609,6 +609,71 @@
    "source": [
     "*******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
+    "\n",
+    "We start by counting each individual item, given 1-itemsets:\n",
+    "\n",
+    "- Ape = 1, 7, 8, 9 $\\rightarrow$ 4\n",
+    "- Bat = 3, 7 $\\rightarrow $ 2\n",
+    "- Cat = 1, 2, 6 $\\rightarrow$ 3\n",
+    "- Cow = 1, 2, 3, 4, 5, 6, 8, 9 $\\rightarrow$ 8\n",
+    "- Dog = 1, 2, 3, 4, 5, 9 $\\rightarrow$ 6\n",
+    "- Pig = 2, 3, 4 $\\rightarrow$ 3\n",
+    "- Fox = 7 $\\rightarrow$ 1\n",
+    "\n",
+    "\n",
+    "Frequent itemsets being:\n",
+    "\n",
+    "- Ape = 4 counts\n",
+    "- Cat = 3 counts\n",
+    "- Cow = 8 counts\n",
+    "- Dog = 6 counts\n",
+    "- Pig = 3 counts\n",
+    "\n",
+    "\n",
+    "Given 2-itemsets from requent 1-itemset\n",
+    "\n",
+    "- (Ape, Cat): 1 $\\rightarrow$ 1\n",
+    "\n",
+    "- (Ape, Cow): 1, 8, 9 $\\rightarrow$ 3\n",
+    "\n",
+    "- (Ape, Dog): 1, 9 $\\rightarrow$ 2\n",
+    "\n",
+    "- (Ape, Pig): — $\\rightarrow$ 0\n",
+    "\n",
+    "- (Cat, Cow): 1, 2, 6 $\\rightarrow$ 3\n",
+    "\n",
+    "- (Cat, Dog): 1, 2 $\\rightarrow$ 2\n",
+    "\n",
+    "- (Cat, Pig): 2 $\\rightarrow$ 1\n",
+    "\n",
+    "- (Cow, Dog): 1, 2, 3, 4, 5, 9 $\\rightarrow$ 6\n",
+    "\n",
+    "- (Cow, Pig): 2, 3, 4 $\\rightarrow$ 3\n",
+    "\n",
+    "- (Dog, Pig): 2, 3, 4 $\\rightarrow$ 3\n",
+    "\n",
+    "\n",
+    "meaning frequent 2-itemsest:\n",
+    "\n",
+    "- (Ape, Cow) $\\rightarrow$ 3\n",
+    "\n",
+    "- (Cat, Cow) $\\rightarrow$ 3\n",
+    "\n",
+    "- (Cow, Dog) $\\rightarrow$ 6\n",
+    "\n",
+    "- (Cow, Pig) $\\rightarrow$ 3\n",
+    "\n",
+    "- (Dog, Pig) $\\rightarrow$ 3\n",
+    "\n",
+    "\n",
+    "Regarding 3-itemsets, the only frequent one we get is, by using the same procedure of combining given the frequent 2-itemsets:\n",
+    "\n",
+    "Freqquent 3-itemsets:\n",
+    "\n",
+    "(Cow, Dog, Pig) $\\rightarrow$ 3\n",
+    "\n",
+    "\n",
+    "\n",
     "******************"
    ]
   },
@@ -628,6 +693,30 @@
    "source": [
     "*******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
+    "\n",
+    "Well, regarding support at least 1/3, this is equivalent to 3/9, meaning that given $A \\rightarrow B$,  we find $\\{A,B\\}$ 3 times for all transactions. \n",
+    "\n",
+    "Regarding confidence at least 1/2, so among the transcation that contain A, half must also contain B, given the itemset found earlier, we conclude that:\n",
+    "\n",
+    "- Ape $\\rightarrow$ Cow (support: 3/9, confidence: 3/4)\n",
+    "- Cow $\\rightarrow$ Ape (support: 3/9, confidence: 3/8)\n",
+    "- Cat $\\rightarrow$ Cow (support: 3/9, confidence: 3/3)\n",
+    "- Cow $\\rightarrow$ Cat (support: 3/9, confidence: 3/8)\n",
+    "- Cow $\\rightarrow$ Dog (support: 6/9, confidence: 6/8)\n",
+    "- Dog $\\rightarrow$ Cow (support: 6/9, confidence: 6/6)\n",
+    "- Cow $\\rightarrow$ Pig (support: 3/9, confidence: 3/8)\n",
+    "- Pig $\\rightarrow$ Cow (support: 3/9, confidence: 3/3)\n",
+    "- Dog $\\rightarrow$ Pig (support: 3/9, confidence: 3/6)\n",
+    "- Pig $\\rightarrow$ Dog (support: 3/9, confidence: 3/3)\n",
+    "- Dog, Pig $\\rightarrow$ Cow (support: 3/9, confidence: 3/3)\n",
+    "- Cow, Pig $\\rightarrow$ Dog (support: 3/9, confidence: 3/3)\n",
+    "- Cow, Dog $\\rightarrow$ Pig (support: 3/9, confidence: 3/6)\n",
+    "- Dog $\\rightarrow$ Pig, Cow (support: 3/9, confidence: 3/6)\n",
+    "- Pig $\\rightarrow$ Dog, Cow (support: 3/9, confidence: 3/3)\n",
+    "\n",
+    "Are the ones who satisfy the criterium. \n",
+    "\n",
+    "\n",
     "******************"
    ]
   },
