--- a/handins/handin3.ipynb
+++ b/handins/handin3.ipynb
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 264,
    "id": "43863d2b-0c64-477a-9c56-70db4563bd09",
    "metadata": {},
    "outputs": [
@@ -872,24 +872,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 290,
    "id": "943d4e28-a3e1-445b-936c-40204b2096a4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(39,): 50675}"
+       "{(39,): 50675, (48,): 42135}"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "### YOUR CODE HERE\n",
-    "apriori_algorithm(kosarak, 50000)"
+    "apriori_algorithm(kosarak, 29200)"
    ]
   },
   {
@@ -899,6 +899,10 @@
    "source": [
     "******************\n",
     "<span style=\"color:red\">**YOUR ANSWER HERE**</span>\n",
+    "\n",
+    "\n",
+    "We tested and the answer we got is approximately between 29100 to 29200, therefore approx 29000 is the answer.  This was done by testing multiple thresholds, which took some time, therefore I conclude that Apriori is quite ineficient to find specific itemsets combinations given that you need to make different computational experiemnts in order to find the good enough, approximately, threshold. This highlights the limitation for exploratory analysis on large-scale data. \n",
+    "\n",
     "******************"
    ]
   },
@@ -915,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 291,
    "id": "fourth-shopper",
    "metadata": {},
    "outputs": [],
@@ -1090,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 292,
    "id": "undefined-lodging",
    "metadata": {},
    "outputs": [],
@@ -1112,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 293,
    "id": "human-proposal",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 294,
    "id": "fitted-identity",
    "metadata": {},
    "outputs": [
@@ -1161,8 +1165,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[158], line 69\u001b[0m\n\u001b[0;32m     65\u001b[0m     np\u001b[38;5;241m.\u001b[39msave(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mitemsets_stderr\u001b[39m\u001b[38;5;124m'\u001b[39m, stderrs)\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results, stderrs\n\u001b[1;32m---> 69\u001b[0m results, stderrs \u001b[38;5;241m=\u001b[39m \u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m     \n",
-      "Cell \u001b[1;32mIn[158], line 51\u001b[0m, in \u001b[0;36mtest\u001b[1;34m()\u001b[0m\n\u001b[0;32m     49\u001b[0m i2 \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m V \u001b[38;5;129;01min\u001b[39;00m itemsets\u001b[38;5;241m.\u001b[39mvalues():\n\u001b[1;32m---> 51\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m \u001b[43mV\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m():\n\u001b[0;32m     52\u001b[0m         i2[\u001b[38;5;28mtuple\u001b[39m(\u001b[38;5;28msorted\u001b[39m(\u001b[38;5;28mlist\u001b[39m(k)))] \u001b[38;5;241m=\u001b[39m v\n\u001b[0;32m     54\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(i1) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(i2)\n",
+      "Cell \u001b[1;32mIn[294], line 69\u001b[0m\n\u001b[0;32m     65\u001b[0m     np\u001b[38;5;241m.\u001b[39msave(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mitemsets_stderr\u001b[39m\u001b[38;5;124m'\u001b[39m, stderrs)\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results, stderrs\n\u001b[1;32m---> 69\u001b[0m results, stderrs \u001b[38;5;241m=\u001b[39m \u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m     \n",
+      "Cell \u001b[1;32mIn[294], line 51\u001b[0m, in \u001b[0;36mtest\u001b[1;34m()\u001b[0m\n\u001b[0;32m     49\u001b[0m i2 \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m V \u001b[38;5;129;01min\u001b[39;00m itemsets\u001b[38;5;241m.\u001b[39mvalues():\n\u001b[1;32m---> 51\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m \u001b[43mV\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m():\n\u001b[0;32m     52\u001b[0m         i2[\u001b[38;5;28mtuple\u001b[39m(\u001b[38;5;28msorted\u001b[39m(\u001b[38;5;28mlist\u001b[39m(k)))] \u001b[38;5;241m=\u001b[39m v\n\u001b[0;32m     54\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(i1) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(i2)\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'items'"
      ]
     }
